package classes;

public class Administrateur extends User {

}
