package classes;

import java.util.ArrayList;

public class Commande {
	
	private ArrayList<Article> ListeArticles;

}
