package classes;

import java.util.ArrayList;

public class Panier {
	
	private int id;
	private ArrayList<Article> ListeArticle;
	private User REF_USER;
	private double PrixTotal;
}
