package classes;

public enum Role {
	User
	,Admin
}
